[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D1.gd" type="Script" id=1]

[node name="Node2D1" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 94.0
margin_top = 10.0
margin_right = 307.0
margin_bottom = 84.0
text = "Salvar informações"

[node name="Button2" type="Button" parent="."]
margin_left = 422.0
margin_top = 3.0
margin_right = 635.0
margin_bottom = 77.0
text = "retornar novo número"

[node name="Button3" type="Button" parent="."]
margin_left = 720.0
margin_top = 3.0
margin_right = 933.0
margin_bottom = 77.0
text = "retornar novo nome"

[node name="Label" type="Label" parent="."]
margin_left = 137.0
margin_top = 101.0
margin_right = 289.0
margin_bottom = 168.0
text = "inserir idade"
align = 1
valign = 1
clip_text = true

[node name="Label2" type="Label" parent="."]
margin_left = 620.0
margin_top = 94.0
margin_right = 738.0
margin_bottom = 174.0
text = "inserir nome
"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 90.0
margin_top = 151.0
margin_right = 360.0
margin_bottom = 284.0

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 542.0
margin_top = 149.0
margin_right = 816.0
margin_bottom = 286.0

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 222.0
margin_top = 376.0
margin_right = 761.0
margin_bottom = 494.0

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect"]
modulate = Color( 0.0627451, 0.0196078, 0.0196078, 1 )
self_modulate = Color( 0.0313726, 0.00392157, 0.00392157, 1 )
margin_left = 27.0
margin_top = 24.0
margin_right = 524.0
margin_bottom = 95.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
